# logseq-linter

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  crates.js  docker-compose.yaml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yaml  docs.yaml
graph/pages/: tests___parsing___blocks___hierarchy.md  tests___parsing___blocks___property.md  tests___parsing___blocks___tags_wikilinks.md  tests___parsing___files___basic.md
logseq_linter/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
logseq_linter/indexer/: index.html  sidebar-items.js  struct.Indexer.html  struct.MdWalker.html
logseq_linter/meilisearch/: index.html  sidebar-items.js  struct.Meilisearch.html
logseq_linter/parsing/: index.html  sidebar-items.js
logseq_linter/parsing/block/: index.html  sidebar-items.js  struct.Block.html  struct.BlockBuilder.html
logseq_linter/parsing/file/: index.html  sidebar-items.js  struct.File.html  struct.FileBuilder.html
src/: files.rs  indexer.rs  logseq.rs  main.rs  meilisearch.rs
src/logseq_linter/: indexer.rs.html  main.rs.html  meilisearch.rs.html  parsing.rs.html
src/logseq_linter/parsing/: block.rs.html  file.rs.html
src/parsing/: block.rs  file.rs
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
(+5 files in other folders)
