[package]
name = "logseq-linter"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dev-dependencies]
just = "1.23.0"

[dependencies]
async-openai = "0.20.0"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.30"
markdown-rs = "0.1.0"
meilisearch-sdk = "0.25.0"
petgraph = "0.6.4"
serde = "1.0.198"
tokio = "1.37.0"